--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "angular-datatables": "^15.0.0",
+    "animate.css": "^4.1.1",
     "datatables.net": "^1.13.3",
     "datatables.net-dt": "^1.13.3",
     "jquery": "^3.6.3",
