--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.0",
     "angular-datatables": "^15.0.0",
     "animate.css": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "datatables.net": "^1.13.3",
     "datatables.net-dt": "^1.13.3",
     "jquery": "^3.6.3",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^15.2.0",
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
