--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "datatables.net": "^1.13.3",
     "datatables.net-dt": "^1.13.3",
     "jquery": "^3.6.3",
+    "ngx-cookie-service": "^15.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
