--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -25,6 +25,7 @@
     "datatables.net-dt": "^1.13.3",
     "jquery": "^3.6.3",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-toastr": "^16.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
